Comments route added

--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,10 @@ body {
   border-color: #11acac;
 }
 
+.no_underline{
+  text-decoration: none;
+}
+
 .btn--flat {
   cursor: pointer;
   font: inherit;
