--- a/src/components/UI/backButton.module.css
+++ b/src/components/UI/backButton.module.css
@@ -1,16 +1,6 @@
 .backButton {
-    background-color: #f1f1f1;
-    color: black;
-    border-radius: 100%;
-    text-decoration: none;
-    display: inline-block;
-    padding: 8px 16px;
-    font-size:x-large;
-    text-align: center;
-  }
+  font-size: 2rem;   
+  padding: .1rem 1.3rem !important;
+}
 
-  .backButton:hover{
-    background-color: #ddd;
-    color: black;
-  }
   
